KS-2192: Increase maven memory. There is a memory leak when exobuild tries to dl too many dependencies